Readded index.py
Status is not being removed from both tables so we need application_status in the context

--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -73,6 +73,7 @@
         <tr>
           <th data-sortable scope="col" role="columnheader">Domain name</th>
           <th data-sortable scope="col" role="columnheader">Date created</th>
+          <th data-sortable scope="col" role="columnheader">Status</th>
           <th scope="col" role="columnheader"><span class="usa-sr-only">Action</span></th>
         </tr>
       </thead>
@@ -83,6 +84,7 @@
             {{ application.requested_domain.name|default:"New domain request" }}
           </th>
           <td data-sort-value="{{ application.created_at|date:"U" }}" data-label="Date created">{{ application.created_at|date }}</td>
+          <td data-label="Status">{{ application.status|title }}</td>
           <td>
              {% if application.status == "started" or application.status == "action needed" or application.status == "withdrawn"  %}
               <a href="{% url 'edit-application' application.pk %}">
