--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -17,7 +17,7 @@
       Start a new domain request
     </a>
   </p>
-
+  {# Removed status per #822 #}
   <section class="section--outlined tablet:grid-col-11 desktop:grid-col-10">
     <h2>Registered domains</h2>
     {% if domains %}
