--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -120,12 +120,12 @@
 
   <section class="section--outlined tablet:grid-col-11 desktop:grid-col-10">
     <h2>Archive</h2>
-    <p>You don't have any archived domains</p> 
+    <p>You don't have anything in the archive yet.</p> 
   </section>
 
   <section class="tablet:grid-col-11 desktop:grid-col-10">
     <h2 class="padding-top-1 mobile-lg:padding-top-3"> Export domains</h2>
-    <p>Download a list of your domains and their statuses as a csv file.</p>
+    <p>If you would like to analyze your list of domains further, you can download your list of domains and their statuses as a csv file.</p>
     <a href="{% url 'todo' %}" class="usa-button usa-button--outline">
       Export domains as csv
     </a>
