updated copy on eleciton question and resolves 774

--- a/src/registrar/templates/application_org_election.html
+++ b/src/registrar/templates/application_org_election.html
@@ -6,7 +6,11 @@
     Is your organization an election office?  <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
   </h2>
 
-  <p>Answer “yes” if the primary purpose of your organization is to manage elections.</p>
+  <p>An election office is a government entity whose <i>primary</i> responsibility is overseeing elections and/or conducting voter registration.
+  <br>
+  <br>
+  Answer “yes” only if the <i>main purpose</i> of your organization is to serve as an election office.</p>
+
 {% endblock %}
 
 {% block form_required_fields_help_text %}
