Table USWDS markup on change_list, after findings from 831

--- a/src/registrar/assets/sass/_theme/_admin.scss
+++ b/src/registrar/assets/sass/_theme/_admin.scss
@@ -125,6 +125,15 @@ table > caption > a {
     text-transform: none;
 }
 
+.change-list {
+    .usa-table--striped tbody tr:nth-child(odd) td,
+    .usa-table--striped tbody tr:nth-child(odd) th,
+    .usa-table td,
+    .usa-table th {
+        background-color: transparent;
+    }
+}
+
 #nav-sidebar {
     padding-top: 20px;
 }
