--- a/src/registrar/assets/sass/_theme/_admin.scss
+++ b/src/registrar/assets/sass/_theme/_admin.scss
@@ -106,8 +106,8 @@ html[data-theme="light"] {
 
     // Dark mode django (bug due to scss cascade) and USWDS tables
     body,
-    .usa-table,
-    .usa-table--striped tbody tr:nth-child(odd) td {
+    .change-list .usa-table,
+    .change-list .usa-table--striped tbody tr:nth-child(odd) td {
         color: var(--body-fg)!important;
     }
 }
