--- a/src/registrar/assets/sass/_theme/_admin.scss
+++ b/src/registrar/assets/sass/_theme/_admin.scss
@@ -112,7 +112,7 @@ html[data-theme="light"] {
     }
 }
 
-// FF needs this to be specifically set
+// Firefox needs this to be specifically set
 html[data-theme="dark"] {
     body,
     .change-list .usa-table,
