fixed semantic tagging of paragraph and used proper <em> tag

--- a/src/registrar/templates/application_org_election.html
+++ b/src/registrar/templates/application_org_election.html
@@ -6,10 +6,9 @@
     Is your organization an election office?  <abbr class="usa-hint usa-hint--required" title="required">*</abbr>
   </h2>
 
-  <p>An election office is a government entity whose <i>primary</i> responsibility is overseeing elections and/or conducting voter registration.
-  <br>
-  <br>
-  Answer “yes” only if the <i>main purpose</i> of your organization is to serve as an election office.</p>
+  <p>An election office is a government entity whose <em>primary</em> responsibility is overseeing elections and/or conducting voter registration.</p>
+
+  <p>Answer “yes” only if the <em>main purpose</em> of your organization is to serve as an election office.</p>
 
 {% endblock %}
 
