explain the 'results doesn't have a form as its first element', which is far away from its if

--- a/src/registrar/templates/admin/change_list_results.html
+++ b/src/registrar/templates/admin/change_list_results.html
@@ -76,7 +76,7 @@ Load our custom filters to extract info from the django generated markup.
     </tr>
     {% endfor %}
 
-{% else %}
+{% else %} {# results doesn't have a form as its first element #}
     
     {% for header in result_headers %}  
     <th scope="col"{{ header.class_attrib }}>
