Wording adjustments: Other employees

--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -2,10 +2,10 @@
 {% load static field_helpers %}
 
 {% block form_instructions %}
-  <p>To help us assess your eligibility for a .gov domain, please provide contact information for at least two other employees from your organization.
+  <p>To help us assess your eligibility for a .gov domain, please provide contact information for other employees from your organization.
     <ul class="usa-list">
-      <li>They must be employees who are clearly and publicly affiliated with your organization and familiar with your domain request. </li>
-      <li>They do not need to be involved with the technical management of your domain (although they can be). </li>
+      <li>They should be clearly and publicly affiliated with your organization and familiar with your domain request. </li>
+      <li>They don't need to be involved with the technical management of your domain (although they can be). </li>
       <li>We typically don’t reach out to these employees, but if contact is necessary, our practice is to coordinate with you, the requestor. </li>
     </ul>
   </p>
