--- a/src/registrar/templates/admin/base_site.html
+++ b/src/registrar/templates/admin/base_site.html
@@ -13,5 +13,20 @@
   {% include "admin/color_theme_toggle.html" %}
 {% endif %}
 {% endblock %}
-
+{% block userlinks %}
+  {% if site_url %}
+      <a href="{{ site_url }}">View site</a> /
+  {% endif %}
+  {% if user.is_active and user.is_staff %}
+      {% url 'django-admindocs-docroot' as docsroot %}
+      {% if docsroot %}
+          <a href="{{ docsroot }}">Documentation</a> /
+      {% endif %}
+  {% endif %}
+  {% if user.has_usable_password %}
+  <a href="{% url 'admin:password_change' %}">Change password</a> /
+  {% endif %}
+  <a href="{% url 'admin:logout' %}" id="admin-logout-button">Log out</a>
+  {% include "admin/color_theme_toggle.html" %}
+ {% endblock %}
 {% block nav-global %}{% endblock %}
