Other employees: Add "first"

--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -6,7 +6,7 @@
     <ul class="usa-list">
       <li>They should be clearly and publicly affiliated with your organization and familiar with your domain request. </li>
       <li>They don't need to be involved with the technical management of your domain (although they can be). </li>
-      <li>We typically don’t reach out to these employees, but if contact is necessary, our practice is to coordinate with you, the requestor. </li>
+      <li>We typically don’t reach out to these employees, but if contact is necessary, our practice is to coordinate first with you, the requestor. </li>
     </ul>
   </p>
 
