--- a/src/registrar/templates/admin/base_site.html
+++ b/src/registrar/templates/admin/base_site.html
@@ -1,5 +1,6 @@
 {% extends "admin/base.html" %}
 {% load static %}
+{% load i18n %}
 
 {% block title %}{% if subtitle %}{{ subtitle }} | {% endif %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
 
@@ -13,20 +14,25 @@
   {% include "admin/color_theme_toggle.html" %}
 {% endif %}
 {% endblock %}
+{% comment %}
+  This was copied from the 'userlinks' template, with a few minor changes.
+  You can find that here:
+  https://github.com/django/django/blob/d25f3892114466d689fd6936f79f3bd9a9acc30e/django/contrib/admin/templates/admin/base.html#L59
+{% endcomment %}
 {% block userlinks %}
   {% if site_url %}
-      <a href="{{ site_url }}">View site</a> /
+      <a href="{{ site_url }}">{% translate 'View site' %}</a> /
   {% endif %}
   {% if user.is_active and user.is_staff %}
       {% url 'django-admindocs-docroot' as docsroot %}
       {% if docsroot %}
-          <a href="{{ docsroot }}">Documentation</a> /
+          <a href="{{ docsroot }}">{% translate 'Documentation' %}</a> /
       {% endif %}
   {% endif %}
   {% if user.has_usable_password %}
-  <a href="{% url 'admin:password_change' %}">Change password</a> /
+      <a href="{% url 'admin:password_change' %}">{% translate 'Change password' %}</a> /
   {% endif %}
-  <a href="{% url 'admin:logout' %}" id="admin-logout-button">Log out</a>
+      <a href="{% url 'admin:logout' %}" id="admin-logout-button">{% translate 'Log out' %}</a>
   {% include "admin/color_theme_toggle.html" %}
  {% endblock %}
 {% block nav-global %}{% endblock %}
