--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -125,7 +125,7 @@
     <p>You don't have any archived domains</p> 
   </section>
 
-  <!-- TODO: Uncomment below when this is being implemented post-MVP -->
+  <!-- Note: Uncomment below when this is being implemented post-MVP -->
   <!-- <section class="tablet:grid-col-11 desktop:grid-col-10">
     <h2 class="padding-top-1 mobile-lg:padding-top-3"> Export domains</h2>
     <p>Download a list of your domains and their statuses as a csv file.</p>
