--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -129,7 +129,7 @@
   <!-- <section class="tablet:grid-col-11 desktop:grid-col-10">
     <h2 class="padding-top-1 mobile-lg:padding-top-3"> Export domains</h2>
     <p>Download a list of your domains and their statuses as a csv file.</p>
-    <a href="{% url 'future note' %}" class="usa-button usa-button--outline">
+    <a href="{% url 'note' %}" class="usa-button usa-button--outline">
       Export domains as csv
     </a>
   </section> -->
