--- a/src/registrar/templates/domain_base.html
+++ b/src/registrar/templates/domain_base.html
@@ -5,11 +5,11 @@
 
 {% block content %}
 <div class="grid-container">
-  <div class="grid-row"> 
-    <p class="font-body-md margin-top-0 margin-bottom-2 
+  <div class="grid-row">
+    <p class="font-body-md margin-top-0 margin-bottom-2
               text-primary-darker text-semibold"
     >
-      <span class="usa-sr-only"> Domain name:</span> {{ domain.name }} 
+      <span class="usa-sr-only"> Domain name:</span> {{ domain.name }}
     </p>
   </div>
   <div class="grid-row grid-gap">
@@ -19,16 +19,29 @@
 
     <div class="tablet:grid-col-9">
       <main id="main-content" class="grid-container">
-
+    {% if not is_analyst_or_superuser %}
 	  <a href="{% url 'home' %}" class="breadcrumb__back">
         <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
         <use xlink:href="{% static 'img/sprite.svg' %}#arrow_back"></use>
         </svg>
-        <p class="margin-left-05 margin-top-0 margin-bottom-0 line-height-sans-1">
-        Back to manage your domains 
-        </p>
-      </a>
 
+        <p class="margin-left-05 margin-top-0 margin-bottom-0 line-height-sans-1">
+        Back to manage your domains
+        </p>
+
+      </a>
+      {% elif is_analyst_or_superuser%}
+      <a href="{% url 'admin:registrar_domain_change' domain.id%}" class="breadcrumb__back">
+        <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
+        <use xlink:href="{% static 'img/sprite.svg' %}#arrow_back"></use>
+        </svg>
+
+        <p class="margin-left-05 margin-top-0 margin-bottom-0 line-height-sans-1">
+        Back to manage your domains
+        </p>
+
+      </a>
+      {% endif %}
       {# messages block is under the back breadcrumb link #}
       {% if messages %}
       {% for message in messages %}
