changed received to submitted

--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -22,7 +22,7 @@
           {% if domainapplication.status == 'approved' %} Approved 
           {% elif domainapplication.status == 'in review' %} In Review 
           {% elif domainapplication.status == 'rejected' %} Rejected
-          {% elif domainapplication.status == 'submitted' %} Received
+          {% elif domainapplication.status == 'submitted' %} Submitted
           {% else %}ERROR Please contact technical support/dev
           {% endif %}
         </p>
