--- a/src/registrar/templates/django/admin/domain_change_form.html
+++ b/src/registrar/templates/django/admin/domain_change_form.html
@@ -2,7 +2,9 @@
 
 {% block field_sets %}
     <div class="submit-row">
-        <a href="{% url 'domain' domain_id %}" class="button" >Edit domain</a>
+
+        <input type="hidden" value="edit" name="analyst_action">
+        <input type="submit" value="Edit Domain" name="_edit_domain">
         <input type="submit" value="Place hold" name="_place_client_hold">
     </div>
     {{ block.super }}
