--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -120,7 +120,7 @@
     {% endif %}
   </section>
 
-  {# Note: Reimplement this after MVP #}
+  {# Note: Reimplement this after MVP.. #}
   <!--
   <section class="section--outlined tablet:grid-col-11 desktop:grid-col-10">
     <h2>Archived domains</h2>
