--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -26,6 +26,7 @@ $letter-space--xs: .0125em;
 @use "uswds-core" as *;
 
 /* Styles for making visible to screen reader / AT users only. */
+
 .sr-only {
    @include sr-only;
  }
@@ -61,9 +62,9 @@ body {
 }
 
 p,
-address, 
-.usa-list li { 
-  @include typeset('sans', 'sm', 5); 
+address,
+.usa-list li {
+  @include typeset('sans', 'sm', 5);
   max-width: measure(5);
 }
 
@@ -118,7 +119,7 @@ h2 {
     color: color('violet-70v'); //USWDS default
   }
 }
-.register-form-step .usa-form-group:first-of-type, 
+.register-form-step .usa-form-group:first-of-type,
 .register-form-step .usa-label:first-of-type {
   margin-top: units(1);
 }
@@ -180,7 +181,7 @@ a.withdraw:active {
       a.link_usa-checked {
         padding: 0;
       }
-    }    
+    }
   }
 }
 
@@ -242,7 +243,7 @@ a.withdraw:active {
 
 .usa-form .usa-button {
   margin-top: units(3);
-} 
+}
 
 .usa-button--unstyled .usa-icon {
   vertical-align: bottom;
@@ -395,7 +396,7 @@ a.usa-button--unstyled:visited {
 }
 
 .dotgov-status-box {
-  background-color: color('primary-lightest'); 
+  background-color: color('primary-lightest');
   border-color: color('accent-cool-lighter');
 }
 
@@ -430,5 +431,13 @@ abbr[title] {
 .usa-textarea {
   @include at-media('tablet') {
     height: units('mobile');
+  }
+}
+
+// Fixes some font size disparities with the Figma
+// for usa-alert alert elements
+.usa-alert {
+  .usa-alert__heading.larger-font-sizing {
+    font-size: units(3);
   }
 }
