--- a/src/registrar/templates/domain_base.html
+++ b/src/registrar/templates/domain_base.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="grid-container">
   <div class="grid-row">
-    {% if not is_analyst_or_superuser or not analyst_action %}
+    {% if not is_analyst_or_superuser or not analyst_action or analyst_action_location != domain.pk %}
     <p class="font-body-md margin-top-0 margin-bottom-2
               text-primary-darker text-semibold"
     >
@@ -21,18 +21,8 @@
 
     <div class="tablet:grid-col-9">
       <main id="main-content" class="grid-container">
-    {% if not is_analyst_or_superuser or not analyst_action %}
-	  <a href="{% url 'home' %}" class="breadcrumb__back">
-        <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
-        <use xlink:href="{% static 'img/sprite.svg' %}#arrow_back"></use>
-        </svg>
 
-        <p class="margin-left-05 margin-top-0 margin-bottom-0 line-height-sans-1">
-        Back to manage your domains
-        </p>
-
-      </a>
-      {% elif is_analyst_or_superuser and analyst_action == 'edit' %}
+      {% if is_analyst_or_superuser and analyst_action == 'edit' and analyst_action_location == domain.pk %}
       <div class="usa-alert usa-alert--warning">
         <div class="usa-alert__body">
           <h4 class="usa-alert__heading larger-font-sizing ">Attention!</h4>
@@ -41,6 +31,16 @@
           </p>
         </div>
       </div>
+      {% else %}
+      <a href="{% url 'home' %}" class="breadcrumb__back">
+        <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
+        <use xlink:href="{% static 'img/sprite.svg' %}#arrow_back"></use>
+        </svg>
+
+        <p class="margin-left-05 margin-top-0 margin-bottom-0 line-height-sans-1">
+        Back to manage your domains
+        </p>
+      </a>
       {% endif %}
       {# messages block is under the back breadcrumb link #}
       {% if messages %}
