--- a/src/registrar/templates/domain_base.html
+++ b/src/registrar/templates/domain_base.html
@@ -23,7 +23,7 @@
       <main id="main-content" class="grid-container">
 
       {% if is_analyst_or_superuser and analyst_action == 'edit' and analyst_action_location == domain.pk %}
-      <div class="usa-alert usa-alert--warning">
+      <div class="usa-alert usa-alert--warning margin-bottom-2">
         <div class="usa-alert__body">
           <h4 class="usa-alert__heading larger-font-sizing">Attention!</h4>
           <p class="usa-alert__text ">
