Unauthorized bug fix
Some pages returned an unauthorized when it should not have, because there was no associated DomainInformation object with them

--- a/src/registrar/templates/django/admin/domain_change_form.html
+++ b/src/registrar/templates/django/admin/domain_change_form.html
@@ -3,7 +3,7 @@
 
 {% block extrahead %}
 {{ block.super }}
-<script type="text/javascript" src="{% static 'js/get-gov-admin.js' %}" defer></script>
+<script type="application/javascript" src="{% static 'js/get-gov-admin.js' %}" defer></script>
 {% endblock %}
 
 {% block field_sets %}
