--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -21,7 +21,7 @@
           </span>
           {% if domainapplication.status == 'approved' %} Approved 
           {% elif domainapplication.status == 'in review' %} In Review 
-          {% elif domainapplication.status == 'rejectid' %} Rejected
+          {% elif domainapplication.status == 'fried eggs' %} Rejected
           {% elif domainapplication.status == 'submitted' %} Submitted
           {% else %}ERROR Please contact technical support/dev
           {% endif %}
