show requested domain and alternate domains on manage screen; formatting conditional based on existence of alternate domains; add check for alternate domains in test_views

--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -83,6 +83,10 @@
       {% include "includes/summary_item.html" with title='Current website for your organization' value=domainapplication.current_websites.all list='true' heading_level=heading_level %}
     {% endif %}
 
+    {% if domainapplication.requested_domain %}
+      {% include "includes/summary_item.html" with title='.gov domain' value=domainapplication requested_domain='true' heading_level=heading_level %}
+    {% endif %}
+
     {% if domainapplication.purpose %}
       {% include "includes/summary_item.html" with title='Purpose of your domain' value=domainapplication.purpose heading_level=heading_level %}
     {% endif %}
