Added missing comma

--- a/src/registrar/templates/domain_base.html
+++ b/src/registrar/templates/domain_base.html
@@ -27,7 +27,7 @@
         <div class="usa-alert__body">
           <h4 class="usa-alert__heading larger-font-sizing">Attention!</h4>
           <p class="usa-alert__text ">
-            You are making changes to a registrant’s domain. When finished making changes, close this tab and inform the registrant of your updates
+            You are making changes to a registrant’s domain. When finished making changes, close this tab and inform the registrant of your updates.
           </p>
         </div>
       </div>
