--- a/src/registrar/templates/admin/change_form.html
+++ b/src/registrar/templates/admin/change_form.html
@@ -1,11 +1,12 @@
 {% extends "admin/change_form.html" %}
 
+{% comment %} Replace the Django ul markup with a div. We'll edit the child markup accordingly in form_list_object_tools {% endcomment %}
 {% block object-tools %}
 {% if change and not is_popup %}
-    <p class="object-tools">
+    <div class="object-tools">
         {% block object-tools-items %}
             {{ block.super }}
         {% endblock %}
-    </p>
+    </div>
 {% endif %}
 {% endblock %}
