implemented add client hold and remove client hold; extended change permission on domain admin to staff; conditionally display buttons based on state; added states to domain to match state diagram

--- a/src/registrar/templates/django/admin/domain_change_form.html
+++ b/src/registrar/templates/django/admin/domain_change_form.html
@@ -2,7 +2,11 @@
 
 {% block field_sets %}
     <div class="submit-row">
-        <input type="submit" value="Place hold" name="_place_client_hold">
+        {% if original.state == original.State.READY %}
+          <input type="submit" value="Place hold" name="_place_client_hold">
+        {% elif original.state == original.State.ONHOLD %}
+          <input type="submit" value="Remove hold" name="_remove_client_hold">
+        {% endif %}
     </div>
     {{ block.super }}
 {% endblock %}
