--- a/src/registrar/templates/application_type_of_work.html
+++ b/src/registrar/templates/application_type_of_work.html
@@ -2,9 +2,25 @@
 {% load field_helpers %}
 
 
+{% block form_instructions %}
+  <p>[For special districts, interstate governments]</p>
+  <p>We’d like to know more about your organization. Include the following in your response: </p>
+  
+    <ul class="usa-list">
+      <li>The type of work your organization does </li>
+      <li>How your organization is a government organization that is independent of a state government </li>
+      <li>Include links to authorizing legislation, applicable bylaws or charter, or other documentation to support your claims.</li>
+    </ul>
+  </p>
+  <p class="text-semibold"><abbr class="usa-hint usa-hint--required" title="required">*</abbr> This question is required.</p>
+{% endblock %}
+
+{% block form_required_fields_help_text %}
+{# empty this block so it doesn't show on this page #}
+{% endblock %}
+
 {% block form_fields %}
   {% with attr_maxlength=1000 %}
     {% input_with_errors forms.0.type_of_work %}
-    {% input_with_errors forms.0.more_organization_information %}
   {% endwith %}
 {% endblock %}
