Changes but with comments this time

--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -68,6 +68,11 @@
       {% include "includes/summary_item.html" with title='Organization name and mailing address' value=domainapplication  address='true' heading_level=heading_level %}
     {% endif %}
 
+    <!-- TODO-446: 
+    {% if domainapplication.about_your_organization %}
+      {% include "includes/summary_item.html" with title='About your organization' value=domainapplication.about_your_organization heading_level=heading_level %}
+    {% endif %} -->
+
     {% if domainapplication.type_of_work %}
       {% include "includes/summary_item.html" with title='Type of work' value=domainapplication.type_of_work heading_level=heading_level %}
     {% endif %}
@@ -75,6 +80,8 @@
     {% if domainapplication.more_organization_information %}
       {% include "includes/summary_item.html" with title='More information about your organization' value=domainapplication.more_organization_information heading_level=heading_level %}
     {% endif %}
+  
+    <!-- TODO-446: Remove above because won't need the textbox anymore -->
 
     {% if domainapplication.authorizing_official %}
       {% include "includes/summary_item.html" with title='Authorizing official' value=domainapplication.authorizing_official contact='true' heading_level=heading_level %}
