--- a/src/registrar/templates/application_review.html
+++ b/src/registrar/templates/application_review.html
@@ -46,6 +46,7 @@
               Incomplete
             {% endif %}
           {% endif %}
+          <!-- TODO-446: {% if step == Step.ABOUT_YOUR_ORGANIZATION %} -->
           {% if step == Step.TYPE_OF_WORK %}
             <p>{{ application.type_of_work|default:"Incomplete" }}</p>
             <p>{{ application.more_organization_information|default:"Incomplete" }}</p>
