--- a/src/registrar/templates/application_type_of_work.html
+++ b/src/registrar/templates/application_type_of_work.html
@@ -1,6 +1,7 @@
 {% extends 'application_form.html' %}
 {% load field_helpers %}
 
+<!-- TODO-446: Change name of file to be application_about_your_organization.html -->
 
 {% block form_instructions %}
   <p>[For special districts, interstate governments]</p>
@@ -19,6 +20,7 @@
 {# empty this block so it doesn't show on this page #}
 {% endblock %}
 
+<!-- TODO-446: Change name form name -->
 {% block form_fields %}
   {% with attr_maxlength=1000 %}
     {% input_with_errors forms.0.type_of_work %}
