--- a/src/registrar/templates/application_type_of_work.html
+++ b/src/registrar/templates/application_type_of_work.html
@@ -13,16 +13,15 @@
       <li>Include links to authorizing legislation, applicable bylaws or charter, or other documentation to support your claims.</li>
     </ul>
   </p>
-  <p class="text-semibold"><abbr class="usa-hint usa-hint--required" title="required">*</abbr> This question is required.</p>
 {% endblock %}
 
 {% block form_required_fields_help_text %}
-{# empty this block so it doesn't show on this page #}
+  <p class="text-semibold"><abbr class="usa-hint usa-hint--required" title="required">*</abbr>This question is required.</p>
 {% endblock %}
 
 <!-- TODO-446: Change name form name -->
 {% block form_fields %}
-  {% with attr_maxlength=1000 %}
-    {% input_with_errors forms.0.type_of_work %}
-  {% endwith %}
+    {% with attr_maxlength=1000 add_label_class="usa-sr-only" %}
+      {% input_with_errors forms.0.type_of_work %}
+    {% endwith %}
 {% endblock %}
