--- a/src/registrar/templates/application_review.html
+++ b/src/registrar/templates/application_review.html
@@ -46,10 +46,8 @@
               Incomplete
             {% endif %}
           {% endif %}
-          <!-- TODO-446: {% if step == Step.ABOUT_YOUR_ORGANIZATION %} -->
-          {% if step == Step.TYPE_OF_WORK %}
-            <p>{{ application.type_of_work|default:"Incomplete" }}</p>
-            <p>{{ application.more_organization_information|default:"Incomplete" }}</p>
+          {% if step == Step.ABOUT_YOUR_ORGANIZATION %}
+            <p>{{ application.about_your_organization|default:"Incomplete" }}</p>
           {% endif %}
           {% if step == Step.AUTHORIZING_OFFICIAL %}
             {% if application.authorizing_official %}
