--- a/src/registrar/templates/django/admin/domain_change_form.html
+++ b/src/registrar/templates/django/admin/domain_change_form.html
@@ -9,9 +9,9 @@
         <input type="submit" value="add nameservers" name="_make_nameservers">
         <input type="submit" value="get nameservers" name="_get_nameservers">
         <input type="submit" value="get status" name="_get_status">
-        <input type="submit" value="add nameservers" name="_set_client_hold">
-        <input type="submit" value="get nameservers" name="_rem_client_hold">
-        <input type="submit" value="get status" name="_delete_domain">
+        <input type="submit" value="Actual Client Hold Set" name="_set_client_hold">
+        <input type="submit" value="remove Client Hold" name="_rem_client_hold">
+        <input type="submit" value="EPP Delete Domain" name="_delete_domain">
     </div>
     {{ block.super }}
 {% endblock %}
