fix unsortable custom columns, fix font-size discrepancy on fixed buttons, lint

--- a/src/registrar/assets/sass/_theme/_admin.scss
+++ b/src/registrar/assets/sass/_theme/_admin.scss
@@ -163,6 +163,7 @@ table > caption > span {
 .delete-confirmation form .cancel-link,
 .submit-row a.closelink {
     height: auto!important;
+    font-size: 14px;
 }
 
 // Keep th from collapsing 
