define col scopes

--- a/src/registrar/templates/admin/app_list.html
+++ b/src/registrar/templates/admin/app_list.html
@@ -6,23 +6,28 @@
       <table>
 
         {# .gov override: add headers #}
+        {% if show_changelinks %}
+          <colgroup span="3"></colgroup>
+        {% else %}
+          <colgroup span="2"></colgroup>
+        {% endif %}
         <thead>
           <tr>
             {% if show_changelinks %}
-              <th colspan="3" class="primary-th">
+              <th colspan="3" class="primary-th" scope="colgroup">
                 {{ app.name }}
               </th>
             {% else %}
-              <th colspan="2" class="primary-th">
+              <th colspan="2" class="primary-th" scope="colgroup">
                 {{ app.name }}
               </th>
             {% endif %}
           </tr>
           <tr>
             <th scope="col">Model</th>
-            <th><span class="display-inline-block min-width-25">Add</span></th>
+            <th scope="col"><span class="display-inline-block min-width-25">Add</span></th>
             {% if show_changelinks %}
-                <th>
+                <th scope="col">
                   <span class="display-inline-block min-width-81">
                     {% translate 'View/Change' %}</th>
                   </span>
